--- a/tensorflow/lite/micro/tools/BUILD
+++ b/tensorflow/lite/micro/tools/BUILD
@@ -22,8 +22,8 @@ py_library(
     name = "generate_cc_arrays_lib",
     srcs = ["generate_cc_arrays.py"],
     deps = [
-        requirement("numpy"),
         requirement("pillow"),
+        requirement("numpy"),
     ],
 )
 
@@ -40,8 +40,8 @@ py_binary(
     name = "generate_cc_arrays",
     srcs = ["generate_cc_arrays.py"],
     deps = [
-        requirement("numpy"),
         requirement("pillow"),
+        requirement("numpy"),
     ],
 )
 
@@ -71,9 +71,9 @@ py_test(
     ],
     deps = [
         ":requantize_flatbuffer",
-        "//python/tflite_micro:runtime",
         requirement("numpy"),
         requirement("tensorflow-cpu"),
+        "//python/tflite_micro:runtime",
     ],
 )
 
@@ -132,11 +132,11 @@ py_library(
     ],
     deps = [
         ":model_transforms_utils",
-        "//tensorflow/lite/micro/python/interpreter/src:runtime",
-        "//tensorflow/lite/tools:flatbuffer_utils",
         "@absl_py//absl/logging",
         requirement("numpy"),
         requirement("tensorflow-cpu"),
+        "//tensorflow/lite/micro/python/interpreter/src:runtime",
+        "//tensorflow/lite/tools:flatbuffer_utils",
     ],
 )
 
@@ -168,8 +168,23 @@ py_test(
     ],
     deps = [
         ":tflm_model_transforms_lib",
-        "//tensorflow/lite/micro/examples/recipes:resource_variables_lib",
         "@absl_py//absl/testing:parameterized",
         requirement("tensorflow-cpu"),
+        "//tensorflow/lite/micro/examples/recipes:resource_variables_lib",
+    ],
+)
+
+py_binary(
+    name = "layer_by_layer_debugger",
+    srcs = ["layer_by_layer_debugger.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":model_transforms_utils",
+        "@absl_py//absl:app",
+        "@absl_py//absl/flags",
+        requirement("tensorflow-cpu"),
+        "//tensorflow/lite/micro/python/interpreter/src:runtime",
+        "//tensorflow/lite/tools:flatbuffer_utils",
     ],
 )
