--- a/.bazelrc
+++ b/.bazelrc
@@ -24,7 +24,7 @@ build --embed_label=0
 # Get stamp values from a script's output
 build --workspace_status_command=./tools/workspace_status.sh
 
-# Needed for Bazel 7.0, until migrated to bzlmod
+# TODO(b/315853820): Needed for Bazel 7.0, until migrated to bzlmod
 build --noenable_bzlmod
 
 # Use the following C++ standard
