build(bazel): replace cc_* with tflm_cc_* in remaining TFLM code
Replace cc_* targets remaining in TFLM code with tflm_cc_*
targets. These are targets which did not formerly use the common
copts. Avoid changing imported TFLite code, if for no other
reason than to avoid merge conflicts during the automatic sync
with upstream TFLite.

BUG=#2636

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -405,7 +405,7 @@ tflm_cc_library(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_log_test",
     srcs = [
         "micro_log_test.cc",
@@ -417,7 +417,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_mutable_op_resolver_test",
     srcs = [
         "micro_mutable_op_resolver_test.cc",
@@ -429,7 +429,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_interpreter_context_test",
     srcs = [
         "micro_interpreter_context_test.cc",
@@ -443,7 +443,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "fake_micro_context_test",
     srcs = [
         "fake_micro_context_test.cc",
@@ -457,7 +457,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_interpreter_test",
     srcs = [
         "micro_interpreter_test.cc",
@@ -474,7 +474,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_allocator_test",
     srcs = [
         "micro_allocator_test.cc",
@@ -492,7 +492,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_allocation_info_test",
     srcs = [
         "micro_allocation_info_test.cc",
@@ -504,7 +504,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "recording_micro_allocator_test",
     srcs = [
         "recording_micro_allocator_test.cc",
@@ -519,7 +519,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "flatbuffer_utils_test",
     srcs = [
         "flatbuffer_utils_test.cc",
@@ -534,7 +534,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "memory_helpers_test",
     srcs = [
         "memory_helpers_test.cc",
@@ -546,7 +546,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "span_test",
     size = "small",
     srcs = [
@@ -558,7 +558,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "testing_helpers_test",
     srcs = [
         "testing_helpers_test.cc",
@@ -570,7 +570,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_utils_test",
     srcs = [
         "micro_utils_test.cc",
@@ -581,7 +581,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_time_test",
     srcs = [
         "micro_time_test.cc",
@@ -592,7 +592,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_resource_variable_test",
     srcs = ["micro_resource_variable_test.cc"],
     deps = [
@@ -601,7 +601,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "memory_arena_threshold_test",
     srcs = [
         "memory_arena_threshold_test.cc",
@@ -615,7 +615,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "static_vector_test",
     size = "small",
     srcs = [
