--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -2,6 +2,7 @@ load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
 load(
     "//tensorflow/lite/micro:build_def.bzl",
     "tflm_cc_library",
+    "tflm_cc_test",
     "tflm_copts",
     "tflm_kernel_cc_library",
 )
@@ -387,7 +388,7 @@ tflm_kernel_cc_library(
 # C++ tests
 ####################################
 
-cc_test(
+tflm_cc_test(
     name = "activations_test",
     srcs = [
         "activations_test.cc",
@@ -401,7 +402,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "add_n_test",
     srcs = [
         "add_n_test.cc",
@@ -416,7 +417,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "add_test",
     srcs = [
         "add_test.cc",
@@ -430,7 +431,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "arg_min_max_test",
     srcs = [
         "arg_min_max_test.cc",
@@ -444,7 +445,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "batch_matmul_test",
     srcs = [
         "batch_matmul_test.cc",
@@ -458,7 +459,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "batch_to_space_nd_test",
     srcs = [
         "batch_to_space_nd_test.cc",
@@ -472,7 +473,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "broadcast_args_test",
     srcs = [
         "broadcast_args_test.cc",
@@ -486,7 +487,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "broadcast_to_test",
     srcs = [
         "broadcast_to_test.cc",
@@ -500,7 +501,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "call_once_test",
     srcs = ["call_once_test.cc"],
     deps = [
@@ -512,7 +513,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "cast_test",
     srcs = ["cast_test.cc"],
     deps = [
@@ -525,7 +526,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "ceil_test",
     srcs = [
         "ceil_test.cc",
@@ -539,7 +540,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "circular_buffer_test",
     srcs = [
         "circular_buffer_test.cc",
@@ -555,7 +556,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "comparisons_test",
     srcs = [
         "comparisons_test.cc",
@@ -568,7 +569,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "concatenation_test",
     srcs = [
         "concatenation_test.cc",
@@ -581,7 +582,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "conv_test",
     srcs = [
         "conv_test.cc",
@@ -597,7 +598,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "cumsum_test",
     srcs = [
         "cumsum_test.cc",
@@ -612,7 +613,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "depth_to_space_test",
     srcs = [
         "depth_to_space_test.cc",
@@ -627,7 +628,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "depthwise_conv_test",
     srcs = [
         "depthwise_conv_test.cc",
@@ -641,7 +642,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "dequantize_test",
     srcs = [
         "dequantize_test.cc",
@@ -654,7 +655,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "detection_postprocess_test",
     srcs = [
         "detection_postprocess_test.cc",
@@ -670,7 +671,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "div_test",
     srcs = [
         "div_test.cc",
@@ -683,7 +684,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "elementwise_test",
     srcs = ["elementwise_test.cc"],
     deps = [
@@ -696,7 +697,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "elu_test",
     srcs = [
         "elu_test.cc",
@@ -711,7 +712,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "embedding_lookup_test",
     srcs = [
         "embedding_lookup_test.cc",
@@ -726,7 +727,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "exp_test",
     srcs = ["exp_test.cc"],
     deps = [
@@ -739,7 +740,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "expand_dims_test",
     srcs = ["expand_dims_test.cc"],
     deps = [
@@ -752,7 +753,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "fill_test",
     srcs = [
         "fill_test.cc",
@@ -766,7 +767,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "floor_div_test",
     srcs = ["floor_div_test.cc"],
     deps = [
@@ -779,7 +780,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "floor_mod_test",
     srcs = ["floor_mod_test.cc"],
     deps = [
@@ -792,7 +793,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "floor_test",
     srcs = [
         "floor_test.cc",
@@ -806,7 +807,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "fully_connected_test",
     srcs = [
         "fully_connected_test.cc",
@@ -821,7 +822,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "gather_test",
     srcs = [
         "gather_test.cc",
@@ -836,7 +837,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "gather_nd_test",
     srcs = [
         "gather_nd_test.cc",
@@ -851,7 +852,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "hard_swish_test",
     srcs = ["hard_swish_test.cc"],
     deps = [
@@ -863,7 +864,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "if_test",
     srcs = ["if_test.cc"],
     deps = [
@@ -877,7 +878,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "l2norm_test",
     srcs = [
         "l2norm_test.cc",
@@ -891,7 +892,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "l2_pool_2d_test",
     srcs = [
         "l2_pool_2d_test.cc",
@@ -906,7 +907,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "leaky_relu_test",
     srcs = [
         "leaky_relu_test.cc",
@@ -921,7 +922,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "logical_test",
     srcs = [
         "logical_test.cc",
@@ -935,7 +936,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "logistic_test",
     srcs = [
         "logistic_test.cc",
@@ -949,7 +950,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "log_softmax_test",
     srcs = [
         "log_softmax_test.cc",
@@ -964,7 +965,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "lstm_eval_test",
     srcs = [
         "lstm_eval_test.cc",
@@ -976,7 +977,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "maximum_minimum_test",
     srcs = [
         "maximum_minimum_test.cc",
@@ -990,7 +991,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "mirror_pad_test",
     srcs = [
         "mirror_pad_test.cc",
@@ -1004,7 +1005,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "mul_test",
     srcs = [
         "mul_test.cc",
@@ -1017,7 +1018,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "neg_test",
     srcs = [
         "neg_test.cc",
@@ -1031,7 +1032,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "pack_test",
     srcs = [
         "pack_test.cc",
@@ -1045,7 +1046,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "pad_test",
     srcs = [
         "pad_test.cc",
@@ -1063,7 +1064,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "pooling_test",
     srcs = [
         "pooling_test.cc",
@@ -1076,7 +1077,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "prelu_test",
     srcs = [
         "prelu_test.cc",
@@ -1089,7 +1090,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "quantization_util_test",
     srcs = [
         "quantization_util_test.cc",
@@ -1101,7 +1102,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "quantize_test",
     srcs = [
         "quantize_test.cc",
@@ -1114,7 +1115,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "reduce_test",
     srcs = [
         "reduce_test.cc",
@@ -1128,7 +1129,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "reshape_test",
     srcs = [
         "reshape_test.cc",
@@ -1143,7 +1144,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "resize_bilinear_test",
     srcs = [
         "resize_bilinear_test.cc",
@@ -1157,7 +1158,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "resize_nearest_neighbor_test",
     srcs = [
         "resize_nearest_neighbor_test.cc",
@@ -1171,7 +1172,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "round_test",
     srcs = [
         "round_test.cc",
@@ -1185,7 +1186,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "select_test",
     srcs = [
         "select_test.cc",
@@ -1199,7 +1200,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "shape_test",
     srcs = ["shape_test.cc"],
     deps = [
@@ -1211,7 +1212,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "slice_test",
     srcs = ["slice_test.cc"],
     deps = [
@@ -1223,7 +1224,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "softmax_test",
     srcs = [
         "softmax_test.cc",
@@ -1237,7 +1238,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "space_to_batch_nd_test",
     srcs = [
         "space_to_batch_nd_test.cc",
@@ -1251,7 +1252,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "space_to_depth_test",
     srcs = [
         "space_to_depth_test.cc",
@@ -1266,7 +1267,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "split_test",
     srcs = [
         "split_test.cc",
@@ -1281,7 +1282,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "split_v_test",
     srcs = [
         "split_v_test.cc",
@@ -1296,7 +1297,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "squared_difference_test",
     srcs = [
         "squared_difference_test.cc",
@@ -1309,7 +1310,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "squeeze_test",
     srcs = ["squeeze_test.cc"],
     deps = [
@@ -1321,7 +1322,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "strided_slice_test",
     srcs = [
         "strided_slice_test.cc",
@@ -1335,7 +1336,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "sub_test",
     srcs = [
         "sub_test.cc",
@@ -1348,7 +1349,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "svdf_test",
     srcs = [
         "svdf_test.cc",
@@ -1361,7 +1362,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "tanh_test",
     srcs = ["tanh_test.cc"],
     deps = [
@@ -1372,7 +1373,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "transpose_test",
     srcs = ["transpose_test.cc"],
     deps = [
@@ -1383,7 +1384,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "transpose_conv_test",
     srcs = [
         "transpose_conv_test.cc",
@@ -1399,7 +1400,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "unidirectional_sequence_lstm_test",
     srcs = [
         "unidirectional_sequence_lstm_test.cc",
@@ -1416,7 +1417,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "unpack_test",
     srcs = [
         "unpack_test.cc",
@@ -1430,7 +1431,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "while_test",
     srcs = [
         "while_test.cc",
@@ -1444,7 +1445,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "zeros_like_test",
     srcs = ["zeros_like_test.cc"],
     deps = [
